@@ -20,9 +20,6 @@ or even Math::BigRat:
 
 	use Math::BigRat lib => 'FastCalc';
 
-The BENCHMARK file will contain a benchmark showing the difference between
-Calc and FastCalc.
-
 Please have fun!
 
 INSTALLATION
@@ -35,5 +32,5 @@ To install this module type the following:
    make test
    make install		# as root
 
-Copyright (C) 2002-2004 Tels - http://bloodgate.com/perl
+Copyright (C) 2002 - 2005 Tels - http://bloodgate.com/perl
 
