@@ -1,4 +1,4 @@
 
-* put _str() into XS
+* put _str() and _new() into XS
 * put _add()/_sub() into XS
 * put all the other routines into XS
