@@ -1633,6 +1633,8 @@ inf:0:inf
 9999999_9999999_9999999_9999999:100_0000000_0000000_0000000:99999
 9999999_9999999_9999999_9999999:10_0000000_0000000_0000000:999999
 9999999_9999999_9999999_9999999:1_0000000_0000000_0000000:9999999
+# bug with shortcut in Calc 0.44
+949418181818187070707070707070707070:181818181853535353535353535353535353:5
 &bmodinv
 # format: number:modulus:result
 # bmodinv Data errors
